# Audio-Cpp-Problems

./: .gitignore  README.md
filter/: main.cpp  noise.h
itd/: ITD  Makefile
itd/src/: main.cpp
itd/src/include/: observer.hpp  speaker.hpp  utils.hpp  voice.hpp  wav.hpp
lcg/: CMakeLists.txt  hacking_lcg.cpp  modinv.cpp
lcg/include/: modinv.h
least_squares/: leastSquares.m  main.m
lkm_linux/: Makefile  dummy_device.c
naivesynth/: Makefile  karplus_strong
naivesynth/src/: karplus_strong.cpp  karplus_strong.h  main.cpp  wav.cpp  wav.h
predict_lcg/: CMakeLists.txt  hacking_lcg.cpp  inv.cpp
